# PipelineSchedule

./: CMakeLists.txt  README  main.cpp
docs/: Draft  Schedule
docs/APPT/OurWork/: Partition and Schedule Algorithms for Neural Network Accelerators.docx
include/: FunctionUnit.h  Generator.h  HEFT.h  Metrics.h  Partition.h  Processor.h  Scheduler.h  Type.h  Util.h  WorkLoad.h
include/Layers/: LayerParam.h  Layers.h
src/: Generator.cpp  HEFT.cpp  Metrics.cpp  Partition.cpp  Processor.cpp  Scheduler.cpp
tools/: input  show_schedule.py  show_task_info.py
